Made final changes

--- a/main.tex
+++ b/main.tex
@@ -422,7 +422,7 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \begin{document}
 
 % \title{Constraining Time Dependent Massive Gravity with the NANOGrav 15-Year Data Set}
-\title{Using Time Dependent Massive Gravity to Reproduce the Stochastic Gravitational Wave Background from the NANOGrav 15-Year Data Set}s
+\title{Using Time-Dependent Massive Gravity to Reproduce the Stochastic Gravitational Wave Background from the NANOGrav 15-Year Data Set}
 
 \date{\today}
 \preprint{N/A}
@@ -434,6 +434,7 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \author{Murman~Gurgenidze}
 \email{mgurgeni@andrew.cmu.edu}
 \affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
+\affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
 
 \author{Tina~Kahniashvili}
 \email{tinatin@andrew.cmu.edu}
@@ -441,21 +442,31 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 \affiliation{School of Natural Sciences and Medicine, Ilia State University, 0194 Tbilisi, Georgia}
 \affiliation{Abastumani Astrophysical Observatory, Tbilisi, GE-0179, Georgia}
 
+\author{Sachiko~Kuroyanagi}
+\email{sachiko.kuroyanagi@csic.es}
+\affiliation{Department of Physics, Nagoya University, Furo-cho Chikusa-ku, Nagoya 464-8602, Japan}
+\affiliation{Instituto de F\'{i}sica Te\'{o}rica UAM-CSIC, Universidad Aut\'{o}noma de Madrid, 28049 Madrid, Spain}
+
 \author{Jacob~Magallanes}
 \email{jmagalla@andrew.cmu.edu}
 \affiliation{Department of Physics, Carnegie Mellon University, Pittsburgh, PA 15213, USA}
 
+\author{Shinji~Mukohyama}
+\email{shinji.mukohyama@yukawa.kyoto-u.ac.jp}
+\affiliation{Center for Gravitational Physics and Quantum Information, Yukawa Institute for Theoretical Physics, Kyoto University, Sakyo-ku, Kyoto 606-8502, Japan}
+\affiliation{Kavli Institute for the Physics and Mathematics of the Universe, the University of Tokyo Institutes for Advanced Study, the University of Tokyo, Kashiwa, Chiba, 277-8583, Japan}
+
 \begin{abstract}
-Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of the minimal theory of massive gravity, and find values of the graviton mass and Hubble rate of inflation that amplify the energy spectra of primordial gravitational waves sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes has to be introduced to obey the BBN bounds. 
+Convincing evidence of a stochastic gravitational wave background has been found by the NANOGrav collaboration in the 15-Year data set. From this signal, we can evaluate the possibility of its source being from the early universe through the tensor perturbations induced by a massive spin-2 graviton field. We consider a time dependent model of the minimal theory of massive gravity, and find values of the graviton mass and Hubble rate of inflation that amplify the energy spectra of primordial gravitational waves sufficiently to reproduce the signal from the NANOGrav data within 1-3 standard deviation. However, a suppression mechanism for high frequency modes has to be introduced to obey the BBN bound. While there are regions of the parameter space that partially reproduces the signal, it remains a challenge to simultaneously respect the BBN and CMB bound in doing so.
 \end{abstract}
 
 \maketitle
 \section{Introduction}
 Evidence supporting the existence of a stochastic gravitational wave background (SGWB) has been found by 15 years of observation of pulsars by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) collaboration \cite{Agazie:2023}, the Chinese Pulsar Timing Array (CPTA) \cite{Xu:2023wog}, the European Pulsar Timing Array (EPTA) \cite{Antoniadis:2023lym,Antoniadis:2023ott}, and the Parkes Pulsar Timing Array (PPTA) \cite{Zic:2023gta,Reardon:2023gzh}. We want to investigate alternatives to the astrophysical explanation, which proposes that the source of the SGWB is inspiraling supermassive black hole binaries (SMBHBs) \citep{Rajagopal:1995,Jaffe:2002rt,Burke-Spolaor:2018bvk} described by a power-law of $f^{13/3}$ \cite{Phinney:2001di}. 
 
-However, more exotic, cosmological origins of the SGWB have not been ruled out  \citep{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak}, due to a discrepancy between the power-law of SMBHBs and the actual signal. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz}, primordial gravitational waves \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej}, and scalar-induced gravitational waves \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo} formed by scalar-tensor inflation. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023, Antoniadis:2023xlr}. In this paper, we consider the primordial gravitational wave hypothesis with the amplification due to massive gravity.
+However, more exotic, cosmological origins of the SGWB have not been ruled out  \citep{Maggiore:1999vm, Caprini:2018mtu, Chen:2021wdo, Wu:2021kmd, Chen:2021ncc, PPTA:2022eul, Wu:2023pbt, Wu:2023dnp, Madge:2023cak}, due to a discrepancy between the power-law of SMBHBs and the actual signal. Such cosmological explanations for the source include  cosmic strings \cite{Damour:2004kw,Siemens:2006yp, Chen:2022azo,Bian:2022tju}, domain walls \cite{Ferreira:2022zzo, Zhang:2023nrs}, first-order phase transitions in the early universe \cite{Kibble:1976sj, Vilenkin:1984ib,Caprini:2010xv, Kobakhidze:2017mru, Arunasalam:2017ajm, Xue:2021gyq, NANOGrav:2021flc, Moore:2021ibq, Addazi:2023jvg, Athron:2023xlk, Bringmann:2023opz}, primordial gravitational waves \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us, Grishchuk:2005qe, Lasky:2015lej}, and scalar-induced gravitational waves \cite{Tomita:1967non, Saito:2008jc, Young:2014ana, Yuan:2019udt, Yuan:2019wwo, Chen:2019xse, Cai:2019bmk, Yuan:2019fwv, Liu:2021jnw, Liu:2023ymk, Cai:2023dls} generated by primordial black holes \cite{Zeldovich:1967lct,Hawking:1971ei,Carr:1974nx,Chen:2018czv,Chen:2018rzo,Liu:2018ess,Liu:2019rnx,Chen:2019irf,Liu:2020cds,Wu:2020drm,Chen:2021nxo,Chen:2022fda,Chen:2022qvg,Liu:2022iuf,Zheng:2022wqo} formed by scalar-tensor inflation. The NANOGrav and EPTA collaborations have considered some of these aforementioned new physics sources \cite{Afzal:2023, Antoniadis:2023xlr}. In this paper, we consider the primordial gravitational wave hypothesis with the amplification due to massive gravity.
 
-Primordial gravitational waves generated during cosmic inflation, freely propagating in the radiation-dominated plasma, are predicted by theory \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us}. It is possible that the signatures of these waves we detect could differ from what we expect based on GR. In fact, there is a possibility that the propagation of these primordial gravitational waves could be modified by alternate theories of gravity, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. 
+Primordial gravitational waves generated during cosmic inflation, freely propagating in the radiation-dominated plasma, are predicted by theory \cite{Grishchuk:1976, Grishchuk:1977zz, Starobinsky:1980te, Linde:1981mu, Fabbri:1983us}. It is possible that the signatures of these waves we detect could differ from what we expect based on GR. In fact, the propagation of these primordial gravitational waves could very well be modified by alternate theories of gravity, including massive gravity (MG), first introduced by Fierz and Pauli in 1939 \cite{Fierz:1939ix}. 
 
 Since then, many attempts have been made to construct a consistent non-linear theory of MG. Any purely linear theory suffers from the van Dam-Veltman-Zakharov (vDVZ) discontinuity \cite{vanDam:1970vg,Zakharov:1970cc}, which prevents the theory from reducing to GR in the massless limit. Attempts have been made to address this, like the nonlinear extensions to the Fierz-Pauli theory that exhibit thed Vainshtein mechanism \cite{Vainshtein:1972sx}. This has its own set of problems, like the Boulware-Deser ghost and other ghost degrees of freedom \cite{Boulware:1972yco,Dubovsky:2004sg}. This presents a significant obstacle for trying to come up with a consistent theory.
 
@@ -496,7 +507,7 @@ where ${\bf k}$ is the comoving momentum, $e^\lambda_{ij}$ are the polarization 
     e^+_{ij}(\hat{\bf k}) = \hat{\bf u}_i\hat{\bf u}_j - \hat{\bf v}_i\hat{\bf v}_j, \quad e^\times_{ij}(\hat{\bf k}) = \hat{\bf u}_i\hat{\bf v}_j - \hat{\bf v}_i\hat{\bf u}_j\ ,
 \end{equation}
 
-\hspace{-1em}given in Eqs. 1.54-56 of Ref.\ \cite{Maggiore:v1}. Here, $\hat{\bf u}, \hat{\bf v}$ are the unit vectors orthogonal to the direction of propagation $\hat{\bf k}$ and to each other. After we minimize the action from Eq.\ \ref{eqn:action} and take into account the helicity decomposition in Eq.\ \ref{eqn:decomp}, we obtain the equation of motion for $h_k^\lambda$ (with the helicity modes suppressed since they have the same equation of motion)
+\hspace{-1em}given in Eqs.\ 1.54-56 of Ref.\ \cite{Maggiore:v1}. Here, $\hat{\bf u}, \hat{\bf v}$ are the unit vectors orthogonal to the direction of propagation $\hat{\bf k}$ and to each other. After we minimize the action from Eq.\ \ref{eqn:action} and take into account the helicity decomposition in Eq.\ \ref{eqn:decomp}, we obtain the equation of motion for $h_k^\lambda$ (with the helicity modes suppressed since they have the same equation of motion)
 \begin{equation}\label{eqn:eom}
     \overline{h}_k'' + \left(c_g^2(\tau) k^2 + a^2 M_\text{GW}^2 - \frac{a''}{a} + 2Kc_g^2(\tau)\right)\overline{h}_k = 0
 \end{equation}
@@ -517,7 +528,7 @@ The scale factor, as described in Eq.\ (4) of Ref.\ \cite{Fujita:2018ehq}, is
         a_r \tau/\tau_r & \tau > \tau_r \\
    \end{cases}
 \end{equation}
-where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $\tau_r$ to be fixed in this discussion, while $H_{\inf}$ and $a_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. % perhaps expalin more about this weird behavior of the conformal time during inflation 
+where $H_{\inf}$ is the Hubble parameter during inflation when the scale corresponding to the Cosmic Microwave Background exits the Hubble horizon and $a_r$ is the scale factor at the reheating time $\tau_r = 1/(a_r H_{\inf})$. We will assume $a_r$ is fixed in this discussion, while $H_{\inf}$ and $\tau_r$ may vary. The bounds on $H_{\inf}$ are discussed in Ref.\ \cite{Jiang:2015qor}, and they will be respected in this paper. The scale factor in this model has a peculiar behavior where it is not defined in the region $(-\tau_r, \tau_r)$ and only takes values outside of that interval. This is to allow for the scale factor and its first derivative to be continuous and to avoid the singularity at $\tau = 0$. % perhaps expalin more about this weird behavior of the conformal time during inflation 
 Fig.\ \ref{fig:mode} illustrates how a generic mode function would look like, showing  the discontinuity in the conformal time. The behavior in the three regions of $\tau$ are discussed in detail in Ref.\ \cite{Fujita:2018ehq}.
 We will use the mass function from Eq.\ 5 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:mass_case}
@@ -542,15 +553,15 @@ where $a_0 = a(\tau_0) = 1$. We will find the power spectrum in MG by finding th
 
 We take the power spectrum from Eq.\ 14 of Ref.\ \cite{Fujita:2018ehq}
 \begin{equation}\label{eqn:p_sfm}
-    \mathcal{P}(\tau, k) \sim \frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{GR}(\tau,k)\ , 
+    \mathcal{P}(\tau, k) \sim \frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{\text{GR}}(\tau,k)\ , 
 \end{equation}
-\hspace{-1em}where $\mathcal{P}_{GR}$ is the power spectrum of the massless tensor modes from inflation, and $\nu$ is defined by 
+where $\mathcal{P}_{\text{GR}}$ is the power spectrum of the massless tensor modes from inflation, and $\nu$ is defined by 
 \begin{equation}\label{eqn:nu}
     \nu = \sqrt{\frac{9}{4} - \frac{m^2}{H_{\inf}^2}}\ .
 \end{equation}
 This expression for the power spectrum is found by solving the equation of motion for the mode function and finding the expression for $\overline{h}_k$ deep in the massless phase (see Sec.\ III(iii) of Ref.\ \cite{Fujita:2018ehq} for more details). As for the GR power spectrum, we can approximate it by using the transfer function detailed in Ref.\ \cite{Kuroyanagi:2014nba}. To briefly recount, the power spectrum in the GR case is 
 \begin{equation}\label{eqn:p_gr_sfm}
-    \mathcal{P}_{GR} = \mathcal{P}^{\text{prim}}_{T} T^2_T(k)
+    \mathcal{P}_{\text{GR}} = \mathcal{P}^{\text{prim}}_{T} T^2_T(k)
 \end{equation}
 where $\mathcal{P}^{\text{prim}}_{T}$ is the primordial tensor power spectrum 
 and $T_{T}$ is the transfer function describing the standard reheating scenario in which the universe had a short matter-dominated era after inflation before reheating ended. $\mathcal{P}^{\text{prim}}_{T}$ is defined in Eq.\ 7 of Ref.\ \cite{Kuroyanagi:2014nba} as follows
@@ -558,86 +569,86 @@ and $T_{T}$ is the transfer function describing the standard reheating scenario 
     \mathcal{P}_{T}^{\text{prim}}(k) = A_T(k_{\text{ref}})\left(\frac{k}{k_{\text{ref}}}\right)^{n_T}
 \end{equation}
 where $A_T(k_{\text{ref}})$ is the amplitude at the reference scale,
-\hspace{-1em}measured to be precisely $4.4\times 10^{10}$, and $n_T$ is the spectral index chosen to be 0. The reference scale $k_{\text{ref}}$ is chosen to be 0.01 Mpc$\/^{-1}$. $T_{T}$ is defined in Eq.\ 12 of Ref.\ \cite{Kuroyanagi:2014nba} in the following way
+\hspace{-1em}measured to be precisely $4.4\times 10^{10}$, and $n_T$ is the spectral index. The reference scale $k_{\text{ref}}$ is chosen to be 0.01 Mpc$\/^{-1}$. $T_{T}$ is defined in Eq.\ 12 of Ref.\ \cite{Kuroyanagi:2014nba} in the following way
 \begin{equation}\label{eqn:tt}
     T_T^2(k) = \Omega_m^2 \frac{g_*(T_\text{in})}{g_{*0}} \frac{g_{*s0}^{4/3}}{g_{*s}^{4/3}(T_{\text{in}})} \frac{9j_1^2(k\tau_0)}{(k\tau_0)^2}T_1^2(x_{\text{eq}}) T_2^2(x_R)
 \end{equation}
 where $g_{*}(T_\text{in})$ and $g_{*0}$ are the relativistic degrees of freedom at the inflation temperature scale and the present respectively, $g_{*s}(T_\text{in})$ and $g_{*s0}$ are their counterparts for entropy, $j_1(k\tau_0)$ is the 1st spherical Bessel function whose approximation $j_1(k\tau_0) \simeq 1/(\sqrt{2}k\tau_0)$ will be used, the fitting functions are empirically found to be $T_1^2(x) = 1+1.57x+3.42x^2$ and $T_2^2(x) = (1-0.22x^{1.5} + 0.65x^2)^{-1}$, and $x_i \equiv k/k_i$. The values for all of the constants and the forms of the functions are taken from Sec. 2.1 of Ref.\ \cite{Kuroyanagi:2014nba}. 
 Since we are interested in the energy density at the present, we consider $\Omega_{\text{GW},0}(f) = \Omega_\text{GW}(\tau_0,f)$
 \begin{equation}\label{eqn:om_gw_0}
-    \Omega_{\text{GW},0}(f) = \frac{\pi^2f^2}{3a_0^2 H_0^2}\frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{GR}(k) .
+    \Omega_{\text{GW},0}(f) = \frac{\pi^2f^2}{3a_0^2 H_0^2}\frac{\tau_m}{\tau_r}(k\tau_r)^{3-2\nu}\mathcal{P}_{\text{GR}}(k) .
 \end{equation}
-In anticipation of our consideration of certain parameters in the next section, we look at the behavior of the energy density as a function of different parameters. Fig.\ \ref{fig:contours}
-\begin{figure}
-\begin{subfigure}{.5\textwidth}
-  \centering
-  \includegraphics[width=.82\linewidth]{fig/fig4a.pdf}  
-  \label{fig:contour-a}
-\end{subfigure}
-\begin{subfigure}{.5\textwidth}
-  \centering
-  \includegraphics[width=.82\linewidth]{fig/fig4b.pdf}  
-  \label{fig:contour-b}
-\end{subfigure}
-\begin{subfigure}{.5\textwidth}
-  \centering
-  \includegraphics[width=.82\linewidth]{fig/fig4c.pdf}  
-  \label{fig:contour-c}
-\end{subfigure}
-\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim 2\times 10^8\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{1/2}$ Hz \cite{Fujita:2018ehq}).} 
-\label{fig:contours}
-\end{figure}
-shows how $\Omega_{\text{GW},0}$ varies with changing $f$ and $M_\text{GW}, \tau_m$, and $H_{\inf}$. We note that in Fig.\ \ref{fig:contours} for the topmost and bottommost plots where we are not varying $\tau_m$, we are taking the upper bound of $\tau_m$, which is determined by the Big Bang Nucleosynthesis (BBN) bounds and is given by Eq.\ 16 of Ref.\ \cite{Fujita:2018ehq}
+In anticipation of our consideration of certain parameters in the next section, we look at the behavior of the energy density as a function of different parameters. Fig.\ \ref{fig:contours} shows how $\Omega_{\text{GW},0}$ varies with changing $f$ and $M_\text{GW}, \tau_m$, and $H_{\inf}$. We note that in Fig.\ \ref{fig:contours} for the topmost and bottommost plots where we are not varying the ratio $\tau_m/\tau_r$, but for the bottom subplot, we are varying it indirectly since $\tau_r$ changes with $H_{\inf}$.
 \begin{equation}\label{eqn:tau_m_bbn}
     \tau_m \lesssim 10^{10}\left(\frac{H_{\inf}}{10^{14} \GeV}\right)^{-2}\tau_r .
 \end{equation}
 
+To comment on the shape of the energy density predicted inflationary theory, we note that there is a change in the slope in the low frequency range, visible near $10^{-17}$ Hz in Fig.\ \ref{fig:contours} and more clearly Fig.\ \ref{fig:supp}. This can be explained by the fact that modes with a sufficiently low frequency have not entered the cosmological horizon. The equation of motion from Eq.\ \ref{eqn:eom} allows for a growing solution of $\overline{h}_k \propto a$ \cite{Gumrukcuoglu:2012wt}. This causes the energy density to grow as the frequency of the mode becomes lower past the point of horizon reentry. 
+
 \section{Results}\label{sec:results}
-We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM model based on NG15 are done by seeing how we can change the parameters $M_\text{GW}, H_{\inf},$ and $\tau_m$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018ehq} and letting $m$ and $\tau_m$ vary didn't produce any gravitational wave energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density. We found that that we have to set $\tau_m$ to its maximum allowed value by the BBN bound, as described by Eq.\ \ref{eqn:tau_m_bbn} in order to be able to reproduce the NG15 signal.
+We now discuss the region of the parameter space that can potentially explain the signals from NG15. The constraints we can place on the SFM model based on NG15 are done by seeing how we can change the parameters $M_{\text{GW}}, H_{\inf},$ and $\tau_m$ to fit the signal. Our initial approach of fixing $H_{\inf}$ to $10^8 \GeV$, like in Ref.\ \cite{Fujita:2018ehq} and letting $m$ and $\tau_m$ vary didn't produce any gravitational wave energy density from inflation that could possibly reproduce NG15. We see in the middle plot of Fig.\ \ref{fig:contours} that increasing $\tau_m$ uniformly increases the primordial energy density. We found that that we have to set $\tau_m$ to its maximum
 
-\begin{figure}[ht]
-    \includegraphics[width=\linewidth]{fig/fig9.pdf}
-    \caption{Posterior probability distribution of the GWB amplitude and spectral index for the NANOGrav data (orange). The value $\gamma_\text{GW}$ = 13/3 (dashed black line) represents the expected SMBHB spectrum. The amplitude is referenced to $f_{\text ref}$ = 1 yr$^{-1}$. The red, blue, and green curves represent the GWB spectra fitted to the $1\sigma$, $2\sigma$, and $3\sigma$ posterior of the signal.}
-    \label{fig:amp_spec}
+\begin{figure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.88\linewidth]{fig/fig4a.pdf}  
+  \label{fig:contour-a}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.88\linewidth]{fig/fig4b.pdf}  
+  \label{fig:contour-b}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=.88\linewidth]{fig/fig4c.pdf}  
+  \label{fig:contour-c}
+\end{subfigure}
+\caption{We plot $\Omega_{\text{GW},0}$ as a function of $f$ and $M$ (top), $\tau_m$ (middle), and $H_{\inf}$ (bottom). The frequency ranges from the scale corresponding to matter-radiation inequality ($\sim 3\times10^{-16}$ Hz) to the inflationary UV cutoff ($\sim \tau_r/(2\pi)$ \cite{Fujita:2018ehq}).} 
+\label{fig:contours}
 \end{figure}
+\hspace{-1em}allowed value by the BBN bound, as described by Eq.\ \ref{eqn:tau_m_bbn} in order to reproduce the NG15 signal.
 
-By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found resulting energy densities that lie within $1\sigma$, $2\sigma$, and $3\sigma$ of the power law posterior of the signal. Our values for the parameters were $M_\text{GW} = 1.298H_{\inf}$ and $H_{\inf} = 0.47 \GeV$ to stay within $1\sigma$ of the posterior, $M_\text{GW} = 1.251H_{\inf}$ and $H_{\inf} = 5.2 \GeV$ to stay within $2\sigma$ 
-
-\onecolumngrid
+%\onecolumngrid
 \begin{figure*}
-\includegraphics[width=\textwidth]{fig/fig8.pdf} 
-\caption{GWB produced by the SFM model. We show the $1\sigma$, $2\sigma$, and $3\sigma$ posterior medians for NG15, in darker to lighter orange respectively. The black dotted line is the GWB spectrum produced by an astrophysical population of inspiraling supermassive black hole binaries with the parameters detailed in Eq.\ A1 of Ref.\ \cite{Afzal:2023}. The red curve is the GWB spectra fitted to the $1\sigma$ posterior, the blue curve is fitted to the $2\sigma$ posterior, and the green curve is fitted to the $3\sigma$ posterior. Here, $H_{14}$ is taken to be $H_{\inf} / 10^{14} \GeV$}
+\includegraphics[width=\textwidth]{fig/fig3_cropped.pdf} 
+\caption{GWB produced by the SFM model. Both figures: we show the BBN excluded region shaded in purple at the top, the periodogram for a Hellings-Down-correlated free spectral process \cite{Agazie:2023} in shaded grey, the $1\sigma$, $2\sigma$, and $3\sigma$ posterior medians for NG15 \cite{Agazie:2023} in darker to lighter orange respectively, and the GWB spectrum produced by an astrophysical population of inspiraling SMBHBs with parameters detailed in Eq.\ A1 of Ref.\ \cite{Afzal:2023} as a black dotted line. Top: The red curve is the GWB spectra fitted to the $1\sigma$ posterior, the blue curve is fitted to the $2\sigma$ posterior, and the green curve is fitted to the $3\sigma$ posterior. Bottom: the purple curve is the energy density that respects the BBN bound for high frequency and passes through the upper limit of the free spectral process of the data, and the golden curve is the energy density that respects the CMB bound for low frequency and passes through the lower limit of the free spectral process of the data.} 
 \label{fig:GWB}
 \end{figure*}
-\twocolumngrid
+%\twocolumngrid
 
-of the posterior $M_\text{GW} = 1.201H_{\inf}$ and $H_{\inf} = 50.0 \GeV$ to stay within $3\sigma$ of the posterior. There are other combinations for the values of $M_GW$ and $H_{\inf}$ if we assume the graviton mass cuts off at an earlier time, but these are the values that we found to violate the BBN limits the least. 
+By varying the other two parameters, $M_{\text{GW}}$ and $H_{\inf}$, we found resulting energy densities that lie within $1\sigma$, $2\sigma$, and $3\sigma$ of the power law posterior of the signal. Our values for the parameters were $M_{\text{GW}} = 1.298H_{\inf}$ and $H_{\inf} =  1.7 \GeV$ to stay within $1\sigma$ of the posterior, $M_{\text{GW}} = 1.251H_{\inf}$ and $H_{\inf} = 8.0 \GeV$ to stay within $2\sigma$ of the posterior $M_{\text{GW}} = 1.201H_{\inf}$ and $H_{\inf} = 50.0 \GeV$ to stay within $3\sigma$ of the posterior. We have kept the ratio $\tau_m/\tau_r$ constant for these three energy densities, although the magnitude of $\tau_m$ changes due to the change in $\tau_r$. We find that any energy density that lies within $3\sigma$ of the power law posteriors must violate the BBN bounds at some point. 
 
-
+If we wish to respect the BBN bound or the CMB bound and still have our theory of MG produce the SGWB for some range of frequencies, constrained by the free spectral violins \cite{Agazie:2023}, we can use the parameters investigated by Ref.\ \cite{Fujita:2018ehq}, with some slight modifications. We see that to order to partially produce the signal in the higher energy density and frequency regime, as shown by the purple curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the CMB bound must be violated. On the other hand, we find that while attempting to partially produce the signal in the lower energy density and frequency regime, as shown by the golden curve in Figs.\ \ref{fig:GWB} and \ref{fig:supp}, the SMBHB power spectrum turns out to be a better fit for the signal. The requirement to respect both bounds to reproduce the signal seems to be mutually exclusive.
 
 \begin{figure}[ht]
-    \includegraphics[width=\linewidth]{fig/fig7.pdf}
-    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, and green curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The suppression takes place right before the energy density surpasses the BBN bound.}
+    \includegraphics[width=\linewidth]{fig/fig5_cropped.pdf}
+    \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, green, purple, and golden curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The blue shaded region represents the exluded region from the CMB bound.} 
     \label{fig:supp}
 \end{figure}
 
-$\,$
 \section{Discussion}\label{sec:discussion}
-In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound. 
+In this paper, we discussed how the constant mass and step function mass models of massive gravity can be constrained by the 15-year NANOGrav data set. We note that the selection of the parameters in the step function mass model leads to energy densities that violate the BBN bound for higher frequencies, specifically in the region of frequencies $\gtrsim 10^{-6}$ Hz. We propose that there could be some mechanism that suppresses the energy density of gravitational waves from the primordial era for those frequencies. A mechanism analogous to the damping of the energy density from the free-streaming neutrinos \cite{Weinberg:2003ur} could be behind such a suppression necessary to obey the BBN bound, if this model of MG is to be the dominant source of the background. Additionally, we find that it is difficult to prevent the violation of both BBN and CMB bounds while also trying to explain the signal more convincingly than the SMBHB explanation.
 
-
-
-Observations of gravitational waves have mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak could be present for lower and lower frequencies is becoming slim, albeit still possible. Therefore, the more plausible possibility of massive gravity is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be interesting to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function. 
-
+Observations of gravitational waves have mostly ruled out the possibility of gravitons with a very low but nonzero mass, since the expectation that a peak, which is predicted from such a model \cite{Gumrukcuoglu:2012wt}, could be present for lower frequencies is becoming slim. Therefore, the more plausible possibility of massive gravity is the scenario in which the graviton mass is a non-constant function of time. We have only considered a step function as the time dependent function, but more complicated functions are possible. The mechanism behind such a mass decay would come from the exact nature of the phase transition of the gravitational field. It may be fruitful to pursue an investigation to place constraints on the specific evolution of the mass during the phase transition. Then, we would be able to probe the mass evolution and shed insight into the time dependent behavior beyond a step function. 
 
 Additionally, further observations that place constraints on the Hubble rate of expansion, the scale factor, and the time associated with inflation would be able to refute or confirm our theory. Another limitation comes from the fact that the BBN bound is defined in terms of a logarithmic integral of the whole frequency interval of the energy density. The suppression we propose is flat in the log-log scale, which would lead to a non-trivial bound from BBN. In addition to signals we have already observed with interferometers, we expect a more drastic suppression for higher frequencies than we discuss. Future work may investigate the nature of this suppression and propose plausible mechanisms for it.
 
 \vspace{2mm}
-{\bf Data availability}---Source code to reproduce all of the figures in this paper is located in our corresponding Github repository \cite{GH}. 
+{\bf Data availability}---The NANOGrav 15-Year data used in this paper is available at \href{https://nanograv.org/science/data}{NANOGrav}. Source code to reproduce all of the figures in this paper is located in our Github repository \cite{GH}. 
 
 \vspace{2mm}
-{\bf Acknowledgements}---We thank Prof.\ Shinji Mukohyama and Prof.\ Sachiko Kuroyanagi for insightful discussions on the nature of their models. We thank Emma Clarke for help with the data, and we thank Sayan Mandal for useful comments.
+{\bf Acknowledgements}--- We appreciate discussions and useful comments from Axel Brandenburg, Neil J.\ Cornish, Arthur B.\ Kosowsky, and Sayan Mandal. We thank Emma Clarke, Jeffrey S.\ Hazboun, and William G.\ Lamb for their help with data analysis. We acknowledge the PITT PACC workshop "Unravelling the Universe with Pulsar Timing Arrays Workshop" 
+during which the paper has been finalized. TK and MG acknowledge partial support from the NASA Astrophysics Theory Program Award 80NSSC22K0825.
 
+
+
+%When ready send me pdf - I am loggin out 
+
+%so potentially 2 weeks past te 7th is okay, if it is difficult for you right now since I know you are going through personal emergency. I will do my berst. It is not like personal, but I have several dead;ines, I am in mcwilliams fellowship search committee and co-chair for grad admission. hundreds of applications needs to bee read
+
+%CC: Ok I see. I have also cropped whitespace from fig 3 to make the figure larger and easier to read 
+%will do the same for fig 4. ok it looks good now. yes I am ready. i will just read through to make sure no typos
 \bibliographystyle{apsrev4-2_edited}
 \bibliography{refs}
 
