--- a/refs.bib
+++ b/refs.bib
@@ -63,20 +63,6 @@ journal = {The Astrophysical Journal Letters},
 abstract = {The 15 yr pulsar timing data set collected by the North American Nanohertz Observatory for Gravitational Waves (NANOGrav) shows positive evidence for the presence of a low-frequency gravitational-wave (GW) background. In this paper, we investigate potential cosmological interpretations of this signal, specifically cosmic inflation, scalar-induced GWs, first-order phase transitions, cosmic strings, and domain walls. We find that, with the exception of stable cosmic strings of field theory origin, all these models can reproduce the observed signal. When compared to the standard interpretation in terms of inspiraling supermassive black hole binaries (SMBHBs), many cosmological models seem to provide a better fit resulting in Bayes factors in the range from 10 to 100. However, these results strongly depend on modeling assumptions about the cosmic SMBHB population and, at this stage, should not be regarded as evidence for new physics. Furthermore, we identify excluded parameter regions where the predicted GW signal from cosmological sources significantly exceeds the NANOGrav signal. These parameter constraints are independent of the origin of the NANOGrav signal and illustrate how pulsar timing data provide a new way to constrain the parameter space of these models. Finally, we search for deterministic signals produced by models of ultralight dark matter (ULDM) and dark matter substructures in the Milky Way. We find no evidence for either of these signals and thus report updated constraints on these models. In the case of ULDM, these constraints outperform torsion balance and atomic clock constraints for ULDM coupled to electrons, muons, or gluons.}
 }
 
-@article{Moore:2015,
-doi = {10.1088/0264-9381/32/1/015014},
-url = {https://dx.doi.org/10.1088/0264-9381/32/1/015014},
-year = {2014},
-month = {dec},
-publisher = {IOP Publishing},
-volume = {32},
-number = {1},
-pages = {015014},
-author = {C J Moore and R H Cole and C P L Berry},
-title = {Gravitational-wave sensitivity curves},
-journal = {Classical and Quantum Gravity},
-abstract = {There are several common conventions in use by the gravitational-wave community to describe the amplitude of sources and the sensitivity of detectors. These are frequently confused. We outline the merits of and differences between the various quantities used for parameterizing noise curves and characterizing gravitational-wave amplitudes. We conclude by producing plots that consistently compare different detectors. Similar figures can be generated on-line for general use at http://rhcole.com/apps/GWplotter.}
-}
 
 @article{Tanin:2020qjw,
     author = "Tanin, Erwin H. and Tenkanen, Tommi",
@@ -205,16 +191,6 @@ abstract = {There are several common conventions in use by the gravitational-wav
   publisher = {Oxford University Press, Oxford},
 }
 
-@article{SymPy:2017,
-    author = {Meurer, Aaron and Smith, Christopher P. and Paprocki, Mateusz and Čertík, Ondřej and Kirpichev, Sergey B. and Rocklin, Matthew and Kumar, Amit and Ivanov, Sergiu and Moore, Jason K. and Singh, Sartaj and Rathnayake, Thilina and Vig, Sean and Granger, Brian E. and Muller, Richard P. and Bonazzi, Fransesco and Gupta, Harsh and Vats, Shivam and Johansson, Fredrik and Pedregosa, Fabian and Curry, Matthew J. and Terrel, Andy R. and Roučka, Štěpán and Saboo, Ashutosh and Fernando, Isuru and Kulal, Sumith and Cimrmam, Robert and Scopatz, Anthony},doi = {10.7717/peerj-cs.103},
-    journal = {PeerJ Computer Science},
-    month = jan,
-    title = {{SymPy: symbolic computing in Python}},
-    url = {https://doi.org/10.7717/peerj-cs.103},
-    volume = {3},
-    year = {2017}
-}
-
 @article{Kuroyanagi:2014nba,
     author = "Kuroyanagi, Sachiko and Takahashi, Tomo and Yokoyama, Shuichiro",
     title = "{Blue-tilted Tensor Spectrum and Thermal History of the Universe}",
@@ -229,7 +205,6 @@ abstract = {There are several common conventions in use by the gravitational-wav
     year = "2015"
 }
 
-
 @article{Weinberg:2003ur,
     author = "Weinberg, Steven",
     title = "{Damping of tensor modes in cosmology}",
@@ -242,7 +217,6 @@ abstract = {There are several common conventions in use by the gravitational-wav
     pages = "023503",
     year = "2004"
 }
-
 
 @article{Planck:2018vyg,
     author = "Aghanim, N. and others",
@@ -379,14 +353,20 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
 @article{Rubakov:2004eb,
-    author = "Rubakov, V. A.",
-    title = "{Lorentz-violating graviton masses: Getting around ghosts, low strong coupling scale and VDVZ discontinuity}",
-    eprint = "hep-th/0407104",
-    archivePrefix = "arXiv",
-    journal="",
-    reportNumber = "INR-TH-39-2004",
-    month = "7",
-    year = "2004"
+    author = {{Rubakov}, V.},
+        title = "{Lorentz-violating graviton masses: getting around ghosts, low strong coupling scale and VDVZ discontinuity}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Theory},
+         year = 2004,
+        month = jul,
+          eid = {hep-th/0407104},
+        pages = {hep-th/0407104},
+          doi = {10.48550/arXiv.hep-th/0407104},
+archivePrefix = {arXiv},
+       eprint = {hep-th/0407104},
+ primaryClass = {hep-th},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004hep.th....7104R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Blas:2009my,
@@ -499,24 +479,38 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
 @article{Phinney:2001di,
-    author = "Phinney, E. S.",
-    title = "{A Practical theorem on gravitational wave backgrounds}",
-    eprint = "astro-ph/0108028",
-    archivePrefix = "arXiv",
-    journal="",
-    month = "7",
-    year = "2001"
+     author = {{Phinney}, E.~S.},
+        title = "{A Practical Theorem on Gravitational Wave Backgrounds}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2001,
+        month = aug,
+          eid = {astro-ph/0108028},
+        pages = {astro-ph/0108028},
+          doi = {10.48550/arXiv.astro-ph/0108028},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0108028},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001astro.ph..8028P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Zic:2023gta,
-    author = "Zic, Andrew and others",
-    title = "{The Parkes Pulsar Timing Array Third Data Release}",
-    eprint = "2306.16230",
-    journal="",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    month = "6",
-    year = "2023"
+    author = {{Zic}, Andrew and {Reardon}, Daniel J. and {Kapur}, Agastya and {Hobbs}, George and {Mandow}, Rami and {Cury{\l}o}, Ma{\l}gorzata and {Shannon}, Ryan M. and {Askew}, Jacob and {Bailes}, Matthew and {Bhat}, N.~D. Ramesh and {Cameron}, Andrew and {Chen}, Zu-Cheng and {Dai}, Shi and {Di Marco}, Valentina and {Feng}, Yi and {Kerr}, Matthew and {Kulkarni}, Atharva and {Lower}, Marcus E. and {Luo}, Rui and {Manchester}, Richard N. and {Miles}, Matthew T. and {Nathan}, Rowina S. and {Os{\l}owski}, Stefan and {Rogers}, Axl F. and {Russell}, Christopher J. and {Sarkissian}, John M. and {Shamohammadi}, Mohsen and {Spiewak}, Ren{\'e}e and {Thyagarajan}, Nithyanandan and {Toomey}, Lawrence and {Wang}, Shuangqiang and {Zhang}, Lei and {Zhang}, Songbo and {Zhu}, Xing-Jiang},
+        title = "{The Parkes Pulsar Timing Array third data release}",
+      journal = {PASA},
+     keywords = {Millisecond pulsars (1062), Pulsar timing method (1305), Gravitational waves (678), Gravitational wave astronomy (675), Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Solar and Stellar Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = oct,
+       volume = {40},
+          eid = {e049},
+        pages = {e049},
+          doi = {10.1017/pasa.2023.36},
+archivePrefix = {arXiv},
+       eprint = {2306.16230},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023PASA...40...49Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Reardon:2023gzh,
@@ -533,26 +527,39 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
 @article{Antoniadis:2023ott,
-    author = "Antoniadis, J. and others",
-    title = "{The second data release from the European Pulsar Timing Array III. Search for gravitational wave signals}",
-    eprint = "2306.16214",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    journal="",
-    month = "6",
-    year = "2023"
+    author = {{EPTA Collaboration} and {InPTA Collaboration} and {Antoniadis}, J. and {Arumugam}, P. and {Arumugam}, S. and {Babak}, S. and {Bagchi}, M. and {Bak Nielsen}, A. -S. and {Bassa}, C.~G. and {Bathula}, A. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Dandapat}, S. and {Deb}, D. and {Desai}, S. and {Desvignes}, G. and {Dhanda-Batra}, N. and {Dwivedi}, C. and {Falxa}, M. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Gopakumar}, A. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Guillemot}, L. and {Guo}, Y.~J. and {Gupta}, Y. and {Hisano}, S. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Joshi}, B.~C. and {Kareem}, F. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kharbanda}, D. and {Kikunaga}, T. and {Kolhe}, N. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Maan}, Y. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Ni{\c{t}}u}, I.~C. and {Nobleson}, K. and {Paladi}, A.~K. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Prabu}, T. and {Quelquejay Leclere}, H. and {Rana}, P. and {Samajdar}, A. and {Sanidas}, S.~A. and {Sesana}, A. and {Shaifullah}, G. and {Singha}, J. and {Speri}, L. and {Spiewak}, R. and {Srivastava}, A. and {Stappers}, B.~W. and {Surnis}, M. and {Susarla}, S.~C. and {Susobhanan}, A. and {Takahashi}, K. and {Tarafdar}, P. and {Theureau}, G. and {Tiburzi}, C. and {van der Wateren}, E. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
+        title = "{The second data release from the European Pulsar Timing Array. III. Search for gravitational wave signals}",
+      journal = {Astron. Astrophys.},
+     keywords = {gravitational waves, methods: data analysis, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2023,
+        month = oct,
+       volume = {678},
+          eid = {A50},
+        pages = {A50},
+          doi = {10.1051/0004-6361/202346844},
+archivePrefix = {arXiv},
+       eprint = {2306.16214},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...678A..50E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Antoniadis:2023lym,
-    author = "Antoniadis, J. and others",
-    title = "{The second data release from the European Pulsar Timing Array I. The dataset and timing analysis}",
-    eprint = "2306.16224",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    journal="",
-    doi = "10.1051/0004-6361/202346841",
-    month = "6",
-    year = "2023"
+    author = {{EPTA Collaboration} and {Antoniadis}, J. and {Babak}, S. and {Bak Nielsen}, A. -S. and {Bassa}, C.~G. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Desvignes}, G. and {Falxa}, M. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Guillemot}, L. and {Guo}, Y.~J. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Ni{\c{t}}u}, I.~C. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Quelquejay Leclere}, H. and {Samajdar}, A. and {Sanidas}, S.~A. and {Sesana}, A. and {Shaifullah}, G. and {Speri}, L. and {Spiewak}, R. and {Stappers}, B.~W. and {Susarla}, S.~C. and {Theureau}, G. and {Tiburzi}, C. and {van der Wateren}, E. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
+        title = "{The second data release from the European Pulsar Timing Array. I. The dataset and timing analysis}",
+      journal = {Astron. Astrophys.},
+     keywords = {gravitational waves, pulsars: general, methods: observational, parallaxes, proper motions, ephemerides, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = oct,
+       volume = {678},
+          eid = {A48},
+        pages = {A48},
+          doi = {10.1051/0004-6361/202346841},
+archivePrefix = {arXiv},
+       eprint = {2306.16224},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...678A..48E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Xu:2023wog,
@@ -673,18 +680,24 @@ abstract = {There are several common conventions in use by the gravitational-wav
     eprint = "2305.08091",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
-    month = "5",
+    doi = "10.1088/1475-7516/2023/09/021",
+    journal = "JCAP",
+    volume = "09",
+    pages = "021",
     year = "2023"
 }
 
 @article{Madge:2023cak,
-    author = "Madge, Eric and Morgante, Enrico and Ib\'a\~nez, Cristina Puchades and Ramberg, Nicklas and Schenk, Sebastian",
-    title = "{Primordial gravitational waves in the nano-Hertz regime and PTA data -- towards solving the GW inverse problem}",
+    author = "Madge, Eric and Morgante, Enrico and Puchades-Ib\'a\~nez, Cristina and Ramberg, Nicklas and Ratzinger, Wolfram and Schenk, Sebastian and Schwaller, Pedro",
+    title = "{Primordial gravitational waves in the nano-Hertz regime and PTA data \textemdash{} towards solving the GW inverse problem}",
     eprint = "2306.14856",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
     reportNumber = "MITP-23-029",
-    month = "6",
+    doi = "10.1007/JHEP10(2023)171",
+    journal = "JHEP",
+    volume = "10",
+    pages = "171",
     year = "2023"
 }
 
@@ -698,7 +711,6 @@ abstract = {There are several common conventions in use by the gravitational-wav
     pages = "1387--1398",
     year = "1976"
 }
-
 
 @article{Vilenkin:1984ib,
     author = "Vilenkin, Alexander",
@@ -796,42 +808,56 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
 @article{Addazi:2023jvg,
-
-    author = "Addazi, Andrea and Cai, Yi-Fu and Marciano, Antonino and Visinelli, Luca",
-
+    author = {{Addazi}, Andrea and {Cai}, Yi-Fu and {Marciano}, Antonino and {Visinelli}, Luca},
     title = "{Have pulsar timing array methods detected a cosmological phase transition?}",
-
-    eprint = "2306.17205",
-
-    archivePrefix = "arXiv",
-
-    primaryClass = "astro-ph.CO",
-
-    month = "6",
-
-    year = "2023"
-
+    journal = {arXiv e-prints},
+    keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+    year = 2023,
+    month = jun,
+    eid = {arXiv:2306.17205},
+    pages = {arXiv:2306.17205},
+    doi = {10.48550/arXiv.2306.17205},
+    archivePrefix = {arXiv},
+    eprint = {2306.17205},
+    primaryClass = {astro-ph.CO},
+    adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230617205A},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Athron:2023xlk,
-    author = "Athron, Peter and Bal\'azs, Csaba and Fowlie, Andrew and Morris, Lachlan and Wu, Lei",
-    title = "{Cosmological phase transitions: from perturbative particle physics to gravitational waves}",
-    eprint = "2305.02357",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    month = "5",
-    year = "2023"
+       author = {{Athron}, Peter and {Bal{\'a}zs}, Csaba and {Fowlie}, Andrew and {Morris}, Lachlan and {Wu}, Lei},
+        title = "{Cosmological phase transitions: from perturbative particle physics to gravitational waves}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = may,
+          eid = {arXiv:2305.02357},
+        pages = {arXiv:2305.02357},
+          doi = {10.48550/arXiv.2305.02357},
+archivePrefix = {arXiv},
+       eprint = {2305.02357},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230502357A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Bringmann:2023opz,
-    author = "Bringmann, Torsten and Depta, Paul Frederik and Konstandin, Thomas and Schmidt-Hoberg, Kai and Tasillo, Carlo",
-    title = "{Does NANOGrav observe a dark sector phase transition?}",
-    eprint = "2306.09411",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    reportNumber = "DESY-23-077",
-    month = "6",
-    year = "2023"
+    author = {{Bringmann}, Torsten and {Depta}, Paul Frederik and {Konstandin}, Thomas and {Schmidt-Hoberg}, Kai and {Tasillo}, Carlo},
+        title = "{Does NANOGrav observe a dark sector phase transition?}",
+      journal = {JCAP},
+     keywords = {big bang nucleosynthesis, cosmological phase transitions, millisecond pulsars, particle physics - cosmology connection, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2023,
+        month = nov,
+       volume = {2023},
+       number = {11},
+          eid = {053},
+        pages = {053},
+          doi = {10.1088/1475-7516/2023/11/053},
+archivePrefix = {arXiv},
+       eprint = {2306.09411},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023JCAP...11..053B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Damour:2004kw,
@@ -910,8 +936,6 @@ abstract = {There are several common conventions in use by the gravitational-wav
 	year={1967},
 	publisher={Oxford University Press}
 }
-
-
 
 @article{Saito:2008jc,
 	author         = "Saito, Ryo and Yokoyama, Jun'ichi",
@@ -1071,13 +1095,20 @@ abstract = {There are several common conventions in use by the gravitational-wav
     year = "2023"
 }
 @article{Liu:2023ymk,
-    author = "Liu, Lang and Chen, Zu-Cheng and Huang, Qing-Guo",
-    title = "{Implications for the non-Gaussianity of curvature perturbation from pulsar timing arrays}",
-    eprint = "2307.01102",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    month = "7",
-    year = "2023"
+    author = {{Liu}, Lang and {Chen}, Zu-Cheng and {Huang}, Qing-Guo},
+        title = "{Implications for the non-Gaussianity of curvature perturbation from pulsar timing arrays}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology},
+         year = 2023,
+        month = jul,
+          eid = {arXiv:2307.01102},
+        pages = {arXiv:2307.01102},
+          doi = {10.48550/arXiv.2307.01102},
+archivePrefix = {arXiv},
+       eprint = {2307.01102},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230701102L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Liu:2022iuf,
@@ -1095,21 +1126,20 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
  @article{Cai:2023dls,
-
-    author = "Cai, Yi-Fu and He, Xin-Chen and Ma, Xiaohan and Yan, Sheng-Feng and Yuan, Guan-Wen",
-
-    title = "{Limits on scalar-induced gravitational waves from the stochastic background by pulsar timing array observations}",
-
-    eprint = "2306.17822",
-
-    archivePrefix = "arXiv",
-
-    primaryClass = "gr-qc",
-
-    month = "6",
-
-    year = "2023"
-
+     author = {{Cai}, Yi-Fu and {He}, Xin-Chen and {Ma}, Xiao-Han and {Yan}, Sheng-Feng and {Yuan}, Guan-Wen},
+        title = "{Limits on scalar-induced gravitational waves from the stochastic background by pulsar timing array observations}",
+      journal = {arXiv e-prints},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Phenomenology},
+         year = 2023,
+        month = jun,
+          eid = {arXiv:2306.17822},
+        pages = {arXiv:2306.17822},
+          doi = {10.48550/arXiv.2306.17822},
+archivePrefix = {arXiv},
+       eprint = {2306.17822},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230617822C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @Article{Carr:1974nx,
@@ -1251,13 +1281,20 @@ abstract = {There are several common conventions in use by the gravitational-wav
 }
 
 @article{Antoniadis:2023xlr,
-    author = "Antoniadis, J. and others",
-    title = "{The second data release from the European Pulsar Timing Array: V. Implications for massive black holes, dark matter and the early Universe}",
-    eprint = "2306.16227",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    month = "6",
-    year = "2023"
+    author = {{Antoniadis}, J. and {Arumugam}, P. and {Arumugam}, S. and {Auclair}, P. and {Babak}, S. and {Bagchi}, M. and {Bak Nielsen}, A. -S. and {Barausse}, E. and {Bassa}, C.~G. and {Bathula}, A. and {Berthereau}, A. and {Bonetti}, M. and {Bortolas}, E. and {Brook}, P.~R. and {Burgay}, M. and {Caballero}, R.~N. and {Caprini}, C. and {Chalumeau}, A. and {Champion}, D.~J. and {Chanlaridis}, S. and {Chen}, S. and {Cognard}, I. and {Crisostomi}, M. and {Dandapat}, S. and {Deb}, D. and {Desai}, S. and {Desvignes}, G. and {Dhanda-Batra}, N. and {Dwivedi}, C. and {Falxa}, M. and {Fastidio}, F. and {Ferdman}, R.~D. and {Franchini}, A. and {Gair}, J.~R. and {Goncharov}, B. and {Gopakumar}, A. and {Graikou}, E. and {Grie{\ss}meier}, J. -M. and {Gualandris}, A. and {Guillemot}, L. and {Guo}, Y.~J. and {Gupta}, Y. and {Hisano}, S. and {Hu}, H. and {Iraci}, F. and {Izquierdo-Villalba}, D. and {Jang}, J. and {Jawor}, J. and {Janssen}, G.~H. and {Jessner}, A. and {Joshi}, B.~C. and {Kareem}, F. and {Karuppusamy}, R. and {Keane}, E.~F. and {Keith}, M.~J. and {Kharbanda}, D. and {Khizriev}, T. and {Kikunaga}, T. and {Kolhe}, N. and {Kramer}, M. and {Krishnakumar}, M.~A. and {Lackeos}, K. and {Lee}, K.~J. and {Liu}, K. and {Liu}, Y. and {Lyne}, A.~G. and {McKee}, J.~W. and {Maan}, Y. and {Main}, R.~A. and {Mickaliger}, M.~B. and {Middleton}, H. and {Neronov}, A. and {Nitu}, I.~C. and {Nobleson}, K. and {Paladi}, A.~K. and {Parthasarathy}, A. and {Perera}, B.~B.~P. and {Perrodin}, D. and {Petiteau}, A. and {Porayko}, N.~K. and {Possenti}, A. and {Prabu}, T. and {Postnov}, K. and {Quelquejay Leclere}, H. and {Rana}, P. and {Roper Pol}, A. and {Samajdar}, A. and {Sanidas}, S.~A. and {Semikoz}, D. and {Sesana}, A. and {Shaifullah}, G. and {Singha}, J. and {Smarra}, C. and {Speri}, L. and {Spiewak}, R. and {Srivastava}, A. and {Stappers}, B.~W. and {Steer}, D.~A. and {Surnis}, M. and {Susarla}, S.~C. and {Susobhanan}, A. and {Takahashi}, K. and {Tarafdar}, P. and {Theureau}, G. and {Tiburzi}, C. and {Truant}, R.~J. and {van der Wateren}, E. and {Valtolina}, S. and {Vecchio}, A. and {Venkatraman Krishnan}, V. and {Verbiest}, J.~P.~W. and {Wang}, J. and {Wang}, L. and {Wu}, Z.},
+        title = "{The second data release from the European Pulsar Timing Array: V. Implications for massive black holes, dark matter and the early Universe}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
+         year = 2023,
+        month = jun,
+          eid = {arXiv:2306.16227},
+        pages = {arXiv:2306.16227},
+          doi = {10.48550/arXiv.2306.16227},
+archivePrefix = {arXiv},
+       eprint = {2306.16227},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230616227A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Grishchuk:1976,
@@ -1339,4 +1376,18 @@ abstract = {There are several common conventions in use by the gravitational-wav
     number = "1",
     pages = "011035",
     year = "2016"
+}
+
+@article{Zhang:2023nrs,
+    author = "Zhang, Zhao and Cai, Chengfeng and Su, Yu-Hang and Wang, Shiyu and Yu, Zhao-Huan and Zhang, Hong-Hao",
+    title = "{Nano-Hertz gravitational waves from collapsing domain walls associated with freeze-in dark matter in light of pulsar timing array observations}",
+    eprint = "2307.11495",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevD.108.095037",
+    journal = "Phys. Rev. D",
+    volume = "108",
+    number = "9",
+    pages = "095037",
+    year = "2023"
 }
