--- a/scrap_we_might_need_later.tex
+++ b/scrap_we_might_need_later.tex
@@ -105,3 +105,11 @@ Thus, we see that the power spectrum takes on the form
     \caption{The energy densities in Fig.\ \ref{fig:GWB} plotted over the whole frequency range specified in Fig.\ \ref{fig:contours}. The red, blue, and green curves correspond to the energy densities of the same color in Fig.\ \ref{fig:GWB}. The turquoise curve below the energy densities is the sensitivity curve for NANOGrav. The suppression takes place right before the energy density surpasses the BBN bound.}
     \label{fig:supp}
 \end{figure}
+
+We thank Prof.\ Shinji Mukohyama and Prof.\ Sachiko Kuroyanagi for insightful discussions on the nature of their models
+
+%\begin{figure}[ht]
+%    \includegraphics[width=\linewidth]{fig/fig9.pdf}
+%    \caption{Posterior probability distribution of the GWB amplitude and spectral index for the NANOGrav data (orange). The value $\gamma_\text{GW}$ = 13/3 (dashed black line) represents the expected SMBHB spectrum. The amplitude is referenced to $f_{\text{ref}}$ = 1 yr$^{-1}$. The red, blue, and green curves represent the GWB spectra fitted to the $1\sigma$, $2\sigma$, and $3\sigma$ posterior of the signal.}
+%    \label{fig:amp_spec}
+%\end{figure}
